// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions - component API should update open 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v6-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="true"
      aria-label="kebab dropdown toggle"
      class="pf-v6-c-menu-toggle pf-m-expanded pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 192 512"
          >
            <path
              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
            />
          </svg>
        </svg>
      </span>
    </button>
    <div
      class="pf-v6-c-menu"
      data-ouia-component-id="BulkActionsList"
      data-ouia-component-type="PF6/Dropdown"
      data-ouia-safe="true"
      style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 0; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px;"
    >
      <div
        class="pf-v6-c-menu__content"
      >
        <ul
          class="pf-v6-c-menu__list"
          role="menu"
        >
          <li
            class="pf-v6-c-menu__list-item ins-c-primary-toolbar__first-action"
            data-ouia-component-id="OUIA-Generated-DropdownItem-:r14:"
            data-ouia-component-type="PF6/DropdownItem"
            data-ouia-safe="true"
            role="none"
          >
            <div
              class="pf-v6-c-menu__item ins-c-primary-toolbar__first-action"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="pf-v6-c-menu__item-main"
              >
                <span
                  class="pf-v6-c-menu__item-text"
                >
                  <button
                    tabindex="0"
                  >
                    Some button
                  </button>
                </span>
              </span>
            </div>
          </li>
          <li
            class="pf-v6-c-menu__list-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-:r16:"
            data-ouia-component-type="PF6/DropdownItem"
            data-ouia-safe="true"
            role="none"
          >
            <button
              class="pf-v6-c-menu__item"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              <span
                class="pf-v6-c-menu__item-main"
              >
                <span
                  class="pf-v6-c-menu__item-text"
                >
                  Some title
                </span>
              </span>
            </button>
          </li>
          <li
            class="pf-v6-c-menu__list-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-:r18:"
            data-ouia-component-type="PF6/DropdownItem"
            data-ouia-safe="true"
            role="none"
          >
            <button
              class="pf-v6-c-menu__item"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              <span
                class="pf-v6-c-menu__item-main"
              >
                <span
                  class="pf-v6-c-menu__item-text"
                >
                  Custom props
                </span>
              </span>
            </button>
          </li>
          <li
            class="pf-v6-c-menu__list-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-:r1a:"
            data-ouia-component-type="PF6/DropdownItem"
            data-ouia-safe="true"
            role="none"
          >
            <button
              class="pf-v6-c-menu__item"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              <span
                class="pf-v6-c-menu__item-main"
              >
                <span
                  class="pf-v6-c-menu__item-text"
                >
                  plain string
                </span>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Actions - component should render actionObject as first action 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button
      class="pf-v6-c-button pf-m-primary"
      data-ouia-component-id="Some title"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Some title
      </span>
    </button>
  </div>
  <div
    class="pf-v6-c-toolbar__item ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v6-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 192 512"
          >
            <path
              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
            />
          </svg>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render actions and overflow 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v6-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v6-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 192 512"
          >
            <path
              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
            />
          </svg>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render empty actions 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar__item ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v6-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 192 512"
          >
            <path
              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
            />
          </svg>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render just actions 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v6-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v6-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 192 512"
          >
            <path
              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
            />
          </svg>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render no data 1`] = `<div />`;

exports[`Actions - component should render one action 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v6-c-toolbar__item ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v6-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 192 512"
          >
            <path
              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
            />
          </svg>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Actions - component should render one action and multiple overflow 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
  >
    <button>
      Some button
    </button>
  </div>
  <div
    class="pf-v6-c-toolbar__item ins-m-actions--empty ins-c-primary-toolbar__actions pf-m-spacer-sm"
  >
    <button
      aria-expanded="false"
      aria-label="kebab dropdown toggle"
      class="pf-v6-c-menu-toggle pf-m-plain"
      data-ouia-component-id="BulkActionsToggle"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 192 512"
          >
            <path
              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
            />
          </svg>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`overflowActionsMapper should render action object 1`] = `
<div>
  <div>
    <li
      class="pf-v6-c-menu__list-item ins-c-primary-toolbar__overflow-actions"
      data-ouia-component-id="OUIA-Generated-DropdownItem-:r2a:"
      data-ouia-component-type="PF6/DropdownItem"
      data-ouia-safe="true"
      role="none"
    >
      <button
        class="pf-v6-c-menu__item ins-c-primary-toolbar__overflow-actions"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          class="pf-v6-c-menu__item-main"
        >
          <span
            class="pf-v6-c-menu__item-text"
          >
            Some title
          </span>
        </span>
      </button>
    </li>
  </div>
</div>
`;

exports[`overflowActionsMapper should render component 1`] = `
<div>
  <div>
    <li
      class="pf-v6-c-menu__list-item ins-c-primary-toolbar__overflow-actions"
      data-ouia-component-id="OUIA-Generated-DropdownItem-:r28:"
      data-ouia-component-type="PF6/DropdownItem"
      data-ouia-safe="true"
      role="none"
    >
      <div
        class="pf-v6-c-menu__item ins-c-primary-toolbar__overflow-actions"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="pf-v6-c-menu__item-main"
        >
          <span
            class="pf-v6-c-menu__item-text"
          >
            <button>
              Some button
            </button>
          </span>
        </span>
      </div>
    </li>
  </div>
</div>
`;

exports[`overflowActionsMapper should render plain string 1`] = `
<div>
  <div>
    <li
      class="pf-v6-c-menu__list-item ins-c-primary-toolbar__overflow-actions"
      data-ouia-component-id="OUIA-Generated-DropdownItem-:r2c:"
      data-ouia-component-type="PF6/DropdownItem"
      data-ouia-safe="true"
      role="none"
    >
      <button
        class="pf-v6-c-menu__item ins-c-primary-toolbar__overflow-actions"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          class="pf-v6-c-menu__item-main"
        >
          <span
            class="pf-v6-c-menu__item-text"
          >
            Custom props
          </span>
        </span>
      </button>
    </li>
  </div>
</div>
`;
